--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "final project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,6 @@
   "dependencies": {
     "express": "^4.18.1",
     "mongoose": "^6.4.0"
-  }
+  },
+  "devDependencies": {}
 }
